<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:orientation="vertical"
    tools:context=".prezentation.home.home.component.FilterBottomSheetFragment">



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bottom_sheet_dinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_56"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/bottom_sheet_option_dinner"
            android:textColor="@color/grayDark"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bottom_sheet_breakfast"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:text="@string/bottom_sheet_option_breakfast"
            android:textColor="@color/grayDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_bottom_sheet_lunch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="@dimen/dp_32"
           android:gravity="start|center_vertical"
            android:text="@string/bottom_sheet_option_lunch"
            android:textColor="@color/grayDark"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/dp_8"

            android:layout_marginTop="@dimen/md_bottom_sheet_separator_top_margin"
            android:background="@color/greenDark" />

        <TextView
            android:id="@+id/tv_bottom_sheet_dessert"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:backgroundTint="@android:color/white"
            android:drawablePadding="@dimen/dp_32"
            android:gravity="start|center_vertical"
            android:text="@string/bottom_sheet_option_desert"
            android:textColor="@color/grayDark"
            android:textSize="16sp" />


</LinearLayout>